# Med-PaLM

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
docs/: DATASETS.md
med_palm/: README.md  __init__.py  attention.py  model.py  palm.py  ppo.py  reward_model.py  utils.py
med_palm/core/: attend.py
medpalm/: __init__.py  attend.py  attention.py  build_dataset.py  embedding.py  lora.py  model.py  optimizer.py  palm.py  ppo.py  reward_model.py  transformer.py  utils.py
medpalm/core/: attend.py  transformer.py
